--- a/index.html
+++ b/index.html
@@ -14,34 +14,36 @@
             <div class="logo">FigmaLand</div>
 
             <nav class="navigation">
-                <a href="#">Home</a>
-                <a href="#">Product</a>
-                <a href="#">Pricing</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </nav>
 
             <div class="header-socials">
-                <a href="#"><img src="photos/twitter.png" alt="X" /></a>
-                <a href="#"><img src="photos/facebook.png" alt="Facebook" /></a>
-                <a href="#"><img src="photos/linkedin.png" alt="LinkedIn" /></a>
+                <a href="#"><img src="photos/twitter.png" width="40" height="40" alt="X" /></a>
+                <a href="#"><img src="photos/facebook.png" width="40" height="40" alt="Facebook" /></a>
+                <a href="#"><img src="photos/linkedin.png" width="40" height="40" alt="LinkedIn" /></a>
             </div>
         </div>
+
+        <!--PHOTO-SECTION-->
+        <section class="photo-section">
+            <div class="container">
+                <h1>The best products start with Figma</h1>
+                <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
+
+                <button class="primary-button">Try For Free</button>
+
+                <div class="primary-image">
+                    <img src="photos/hero-laptop.png" alt="Laptop" />
+                </div>
+            </div>
+        </section>
     </header>
-
-    <!--PHOTO-SECTION-->
-    <section class="photo-section">
-        <div class="container">
-            <h1>The best products start with Figma</h1>
-            <p>Most calendars are designed for teams. Slate is designed for freelancers</p>
-
-            <button class="primary-button">Try For Free</button>
-
-            <div class="primary-image">
-                <img src="photos/hero-laptop.png" alt="Laptop" />
-            </div>
-        </div>
-    </section>
 
     <!--FEATURES-->
     <section class="fetures">
@@ -51,23 +53,22 @@
 
             <div class="feature-grid">
                 <div class="feature-item">
-                    <img src="photos/icon1.png" alt="icon 1" />
+                    <img src="photos/icon1.png" width="40" height="40" alt="icon 1" />
 
-                    <h4><b>OpenType features</b></h4>
-                    <h4><b>Variable fonts</b></h4>
+                    <h4><b>OpenType features Variable fonts</b></h4>
 
                     <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
                 </div>
 
                 <div class="feature-item">
-                    <img src="photos/icon2.png" alt="icon 2" />
+                    <img src="photos/icon2.png" width="40" height="40" alt="icon 2" />
 
                     <h4><b>Design with real data</b></h4>
                     <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
                 </div>
 
                 <div class="feature-item">
-                    <img src="photos/icon3.png" alt="icon 3" />
+                    <img src="photos/icon3.png" width="40" height="40" alt="icon 3" />
 
                     <h4><b>Fastest way to take action</b></h4>
                     <p>Slate helps you see how many more days you need to work to reach your financial goal.</p>
@@ -112,42 +113,42 @@
             <div class="partners-logos">
                 <div class="logo">
                     <p>Client Name</p>
-                    <img src="photos/google.png" alt="Google" />
+                    <img src="photos/google.png" width="120" height="50" alt="Google" />
                 </div>
 
                 <div class="logo">
                     <p>Client Name</p>
-                    <img src="photos/amazon.png" alt="Amazon" />
+                    <img src="photos/amazon.png" width="120" height="60" alt="Amazon" />
                 </div>
 
                 <div class="logo">
                     <p>Client Name</p>
-                    <img src="photos/microsoft.png" alt="Microsoft" />
+                    <img src="photos/microsoft.png" width="110" height="40" alt="Microsoft" />
                 </div>
 
                 <div class="logo">
                     <p>Client Name</p>
-                    <img src="photos/uber.png" alt="Uber" />
+                    <img src="photos/uber.png" width="120" height="40" alt="Uber" />
                 </div>
 
                 <div class="logo">
                     <p>Client Name</p>
-                    <img src="photos/dropbox.png" alt="DropBox" />
+                    <img src="photos/dropbox.png" width="120" height="50" alt="DropBox" />
                 </div>
 
                 <div class="logo">
                     <p>Client Name</p>
-                    <img src="photos/google.png" alt="Google" />
+                    <img src="photos/google.png" width="120" height="50" alt="Google" />
                 </div>
 
                 <div class="logo">
                     <p>Client Name</p>
-                    <img src="photos/uber.png" alt="Uber" />
+                    <img src="photos/uber.png" width="120" height="40" alt="Uber" />
                 </div>
 
                 <div class="logo">
                     <p>Client Name</p>
-                    <img src="photos/amazon.png" alt="Amazon">
+                    <img src="photos/amazon.png" width="120" height="60" alt="Amazon">
                 </div>
             </div>
 
@@ -159,7 +160,7 @@
     <section class="testimonials">
         <div class="container">
             <h2>Testimonials</h2>
-            <img src="photos/ibm.png" alt="IBM Logo">
+            <img src="photos/ibm.png" width="80" height="60" alt="IBM Logo">
 
             <p class="testimonial-text">
                 Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.
@@ -237,20 +238,25 @@
             </div>
 
             <div class="address">
-                <img src="photos/location.png" />
-                <p>6386 Spring St undefined Anchorage, Georgia 12473 United States</p>
+                <address>
+                    <img src="photos/location.png" width="40" height="40" alt="pin" />
+                    <p>6386 Spring St undefined Anchorage, Georgia 12473 United States</p>
+                </address>
 
-                <img src="photos/phone.png" />
-                <p>(843) 555-0130</p>
+                <address>
+                    <img src="photos/phone.png" width="40" height="40" alt="phone" />
+                    <p>(843) 555-0130</p>
+                </address>
 
-                <img src="photos/mail.png" />
-                <p>willie.jennings@example.com</p>
-
+                <address>
+                    <img src="photos/email.png" width="40" height="40" alt="email" />
+                    <p>willie.jennings@example.com</p>
+                </address>
             </div>
             <div class="socials">
-                <a href="#"><img src="photos/twitter.png" alt="X" /></a>
-                <a href="#"><img src="photos/facebook.png" alt="Facebook" /></a>
-                <a href="#"><img src="photos/linkedin.png" alt="LinkedIn" /></a>
+                <a href="#"><img src="photos/twitter.png" width="40" height="40" alt="X" /></a>
+                <a href="#"><img src="photos/facebook.png" width="40" height="40" alt="Facebook" /></a>
+                <a href="#"><img src="photos/linkedin.png" width="40" height="40" alt="LinkedIn" /></a>
             </div>
 
             <div class="contact-us-map">
@@ -292,14 +298,14 @@
             </div>
 
             <div class="footer-socials">
-                <img src="location.png" />
+                <img src="photos/location.png" width="40" height="40" alt="location" />
                 <p>6386 Spring St undefined Anchorage, Georgia 12473 United States</p>
-                <img src="photos/phone.png"/>
+                <img src="photos/phone.png" width="40" height="40" alt="phone" />
                 <p>(843) 555-0130</p>
 
-                <a href="#"><img src="photos/twitter.png" alt="X" /></a>
-                <a href="#"><img src="photos/facebook.png" alt="Facebook" /></a>
-                <a href="#"><img src="photos/linkedin.png" alt="LinkedIn" /></a>
+                <a href="#"><img src="photos/twitter.png" width="40" height="40" alt="X" /></a>
+                <a href="#"><img src="photos/facebook.png" width="40" height="40" alt="Facebook" /></a>
+                <a href="#"><img src="photos/linkedin.png" width="40" height="40" alt="LinkedIn" /></a>
             </div>
         </div>
     </footer>
