--- a/index.html
+++ b/index.html
@@ -7,45 +7,46 @@
     <link rel="shortcut icon" href="photos/logo.png" type="image/x-icon">
 </head>
 <body>
-    <main>
-        <!--HEADER-->
-        <header class="header">
-            <div class="header__container">
+    <!--HEADER-->
+    <header class="header">
+        <div class="header__container">
 
-                <div class="header__logo">FigmaLand</div>
+            <div class="header__logo">FigmaLand</div>
 
-                <nav class="header__nav navigation">
-                    <ul class="navigation__list">
-                        <li class="navigation__item"><a class="navigation__link" href="#">Home</a></li>
-                        <li class="navigation__item"><a class="navigation__link" href="#">Product</a></li>
-                        <li class="navigation__item"><a class="navigation__link" href="#">Pricing</a></li>
-                        <li class="navigation__item"><a class="navigation__link" href="#">About</a></li>
-                        <li class="navigation__item"><a class="navigation__link" href="#">Contact</a></li>
-                    </ul>
-                </nav>
+            <nav class="header__nav navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a class="navigation__link" href="#">Home</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">Product</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">Pricing</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">About</a></li>
+                    <li class="navigation__item"><a class="navigation__link" href="#">Contact</a></li>
+                </ul>
+            </nav>
 
-                <div class="header__socials socials">
-                    <a class="socials__link" href="#"><img class="socials__icon" src="photos/twitter.png" width="40" height="40" alt="X" /></a>
-                    <a class="socials__link" href="#"><img class="socials__icon" src="photos/facebook.png" width="40" height="40" alt="Facebook" /></a>
-                    <a class="socials__link" href="#"><img class="socials__icon" src="photos/linkedin.png" width="40" height="40" alt="LinkedIn" /></a>
-                </div>
-
+            <div class="header__socials socials">
+                <a class="socials__link" href="#"><img class="socials__icon" src="photos/twitter.png" width="40" height="40" alt="X" /></a>
+                <a class="socials__link" href="#"><img class="socials__icon" src="photos/facebook.png" width="40" height="40" alt="Facebook" /></a>
+                <a class="socials__link" href="#"><img class="socials__icon" src="photos/linkedin.png" width="40" height="40" alt="LinkedIn" /></a>
             </div>
 
-            <!--HERO-->
-            <section class="hero">
-                <div class="hero__container">
-                    <h1 class="hero__title">The best products start with Figma</h1>
-                    <p class="hero__subtitle">Most calendars are designed for teams. Slate is designed for freelancers</p>
+        </div>
 
-                    <button class="button button--primary hero__button">Try For Free</button>
+        <!--HERO-->
+        <section class="hero">
+            <div class="hero__container">
+                <h1 class="hero__title">The best products start with Figma</h1>
+                <p class="hero__subtitle">Most calendars are designed for teams. Slate is designed for freelancers</p>
 
-                    <div class="hero__image-wrapper">
-                        <img class="hero__image" src="photos/hero-laptop.png" alt="Laptop" />
-                    </div>
+                <button class="button button--primary hero__button">Try For Free</button>
+
+                <div class="hero__image-wrapper">
+                    <img class="hero__image" src="photos/hero-laptop.png" alt="Laptop" />
                 </div>
-            </section>
-        </header>
+            </div>
+        </section>
+    </header>
+
+    <main>
 
         <!--FEATURES-->
         <section class="features">
@@ -58,7 +59,7 @@
 
                     <div class="features__item feature">
                         <img class="feature__icon" src="photos/icon1.png" width="40" height="40" alt="icon 1" />
-                        <h4 class="feature__title"><b>OpenType features Variable fonts</b></h4>
+                        <h4 class="feature__title"><b>OpenType features<br />Variable fonts</b></h4>
                         <p class="feature__text">Slate helps you see how many more days you need to work to reach your financial goal.</p>
                     </div>
 
@@ -172,8 +173,10 @@
 
                     <div class="pricing__card price-card">
                         <h3 class="price-card__title">FREE</h3>
-                        <p class="price-card__price">0$</p>
-                        <p class="price-card__period">Per Month</p>
+                        <div class="price">
+                            <p class="number"><b>0</b></p>
+                            <p class="price-card__price"><b>$</b><br />Per Month</p>
+                        </div>
                         <ul class="price-card__list">
                             <li class="price-card__item">Pricing Feature</li>
                             <li class="price-card__item">Pricing Feature</li>
@@ -186,8 +189,10 @@
 
                     <div class="pricing__card price-card price-card--blue">
                         <h3 class="price-card__title">STANDARD</h3>
-                        <p class="price-card__price">10$</p>
-                        <p class="price-card__period">Per Month</p>
+                        <div class="price">
+                            <p class="number"><b>10</b></p>
+                            <p class="price-card__price"><b>$</b><br />Per Month</p>
+                        </div>
                         <ul class="price-card__list">
                             <li class="price-card__item">Pricing Feature</li>
                             <li class="price-card__item">Pricing Feature</li>
@@ -199,9 +204,10 @@
                     </div>
 
                     <div class="pricing__card price-card">
-                        <h3 class="price-card__title">BUSINESS</h3>
-                        <p class="price-card__price">99$</p>
-                        <p class="price-card__period">Per Month</p>
+                        <div class="price">
+                            <p class="number"><b>99</b></p>
+                            <p class="price-card__price"><b>$</b><br />Per Month</p>
+                        </div>
                         <ul class="price-card__list">
                             <li class="price-card__item">Pricing Feature</li>
                             <li class="price-card__item">Pricing Feature</li>
@@ -220,7 +226,7 @@
         <section class="contact">
             <div class="contact__container">
 
-                <h2 class="contact__title">Pricing</h2>
+                <h2 class="contact__title">Contact Us</h2>
                 <p class="contact__subtitle">Most calendars are designed for teams. Slate is designed for freelancers</p>
 
                 <div class="contact__form-wrapper">
@@ -266,6 +272,7 @@
             </div>
         </section>
     </main>
+
     <!-- FOOTER -->
     <footer class="footer">
         <div class="footer__container footer__grid">
@@ -311,6 +318,5 @@
 
         </div>
     </footer>
-
 </body>
 </html>
