--- a/index.html
+++ b/index.html
@@ -300,12 +300,12 @@
             <div class="footer__details">
                 <div class="footer__address-line">
                     <img class="footer__icon" src="photos/location.png" width="40" height="40" alt="location" />
-                    <p class="footer__address-text">6386 Spring St undefined Anchorage, Georgia 12473 United States</p>
+                    <p class="footer__address-text">7480 Mockingbird Hill undefined</p>
                 </div>
 
                 <div class="footer__address-line">
                     <img class="footer__icon" src="photos/phone.png" width="40" height="40" alt="phone" />
-                    <p class="footer__address-text">(843) 555-0130</p>
+                    <p class="footer__address-text">(239) 555-0108</p>
                 </div>
 
                 <div class="footer__socials socials">
