Add css for partners

--- a/index.html
+++ b/index.html
@@ -205,8 +205,6 @@
               <img
                 class="partners__logo"
                 src="photos/google.png"
-                width="120"
-                height="50"
                 alt="Google"
               />
             </div>
@@ -216,8 +214,6 @@
               <img
                 class="partners__logo"
                 src="photos/amazon.png"
-                width="120"
-                height="60"
                 alt="Amazon"
               />
             </div>
@@ -227,8 +223,6 @@
               <img
                 class="partners__logo"
                 src="photos/microsoft.png"
-                width="110"
-                height="40"
                 alt="Microsoft"
               />
             </div>
@@ -238,8 +232,38 @@
               <img
                 class="partners__logo"
                 src="photos/uber.png"
-                width="120"
-                height="40"
+                alt="Uber"
+              />
+            </div>
+             <div class="partners__item">
+              <p class="partners__client-name">Client Name</p>
+              <img
+                class="partners__logo"
+                src="photos/dropbox.png"
+                alt="Uber"
+              />
+            </div>
+             <div class="partners__item">
+              <p class="partners__client-name">Client Name</p>
+              <img
+                class="partners__logo"
+                src="photos/google.png"
+                alt="Uber"
+              />
+            </div>
+             <div class="partners__item">
+              <p class="partners__client-name">Client Name</p>
+              <img
+                class="partners__logo"
+                src="photos/uber.png"
+                alt="Uber"
+              />
+            </div>
+             <div class="partners__item">
+              <p class="partners__client-name">Client Name</p>
+              <img
+                class="partners__logo"
+                src="photos/amazon.png"
                 alt="Uber"
               />
             </div>
